# CameraUnitySimulator

./: README.md
clientProject/: CMakeCache.txt  CMakeLists.txt  Makefile  camara.cpp  gui.h  libraries.h  test
clientProject/API project/: API project.cbp
clientProject/extra files/: ClienteBasico.cpp  ClienteFPS  test-Copy14122016.cpp
clientProject/resources/: cameras.txt
unityProject/: camara.h  cmake_install.cmake  conexion.cpp  conexion.h  gui.cpp  menu.c  menu.h  my_log (Copia en conflicto de ubuntu 2017-01-17).txt  my_log.txt  test (Copia en conflicto de ubuntu 2017-01-17).cpp~  test.cpp  varios.cpp  varios.h
unityProject/API project/: API project.layout
unityProject/EPS-Lite v1.4/Assets/: EPS-Lite.unity  EPS-full.unity  EmptyProject.unity
unityProject/EPS-Lite v1.4/Assets/Plugins/: OpenCV.cs
unityProject/EPS-Lite v1.4/Assets/Plugins/x86_64/: LICENSES.TXT
unityProject/EPS-Lite v1.4/Assets/Simulator classes/: BufferCamera.cs  CameraSimulator.cs  CamerasController.cs  CommandsManager.cs  Encoder.cs  StartApp.cs  TCPServerAsyn.cs  ThreadPool.cs
unityProject/EPS-Lite v1.4/Assets/Simulator objects/: CameraUnityObject.prefab  LimitCeiling.prefab  LimitFloor.prefab  LimitScenario.prefab  MiniMapCam.prefab  MultiCameraSimulator.prefab
unityProject/EPS-Lite v1.4/Assets/Simulator objects/Extras/Materials/: textureFloor.mat
unityProject/EPS-Lite v1.4/Assets/Utils Scripts/: AutoMinimap.cs  FPSDisplay.cs
unityProject/extra files/: ClienteBasico  ClienteFPS.cpp
